--- a/style.css
+++ b/style.css
@@ -1,12 +1,13 @@
 table {
-border: 1px solid #111;
+border: 1px outset;
 }
 td,th {
-border: 1px solid #333; 
 padding: 5px; 
+border: 1px inset;
 }
 .tabl1{
 margin: auto;
+
 }
 .tabl2{
 width: 600px;
@@ -20,8 +21,8 @@ text-align: left;
 width: 600px;
 margin: auto;
 margin-top: 20px;
-border-collapse: collapse;
-border: 3px ridge #A9A9A9;
+border-spacing: 0px;
+border: 2px outset;
 }
 .tabl3 th{
 text-align: left;
